--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: aliceblue;
     font-family: Helvetica, sans-serif;
     padding: 0 0 0 0px;
+    margin-left: 40px;
 }
 
 header img {
@@ -10,16 +11,12 @@ header img {
 
 header p {
     font-weight: 545;
+    padding-bottom: 50px;
 }
 
 .links a {
    text-decoration: underline; 
    color: blue;
-}
-
-.links {
-    padding-top: 30px;
-    display: inline-block;
 }
 
 .links h3 {
@@ -31,7 +28,7 @@ header p {
 }
 
 .habilidades {
-    display: inline-block;
+    padding-top: 50px;
 }
 
 .habilidades li {
